# sonshell

./: .gitignore  AGENTS.md  CMakeLists.txt  DOCS  DOCS.md  INSTALL  INSTALL.md  README.md
config/: example.yml
docs/: kdeconnect.txt
scripts/: broadcast.sh  broadcast.yml  debug.sh  find_adb.sh  gmic.sh  post2ig.sh  share_android.sh  show.sh  show.sh~  show_single.sh  show_single.sh~  tensiongreen1.sh  to_android.sh
src/: main.cpp
tools/: gen_error_names.py  gen_prop_names.py
